# Quasar

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md
Quasar/: Exceptions.h  functions.h  global.h  quasar.h  source.h  transform.h
Quasar/experimental/: FixedType.h
Quasar/experimental/filter/: MelFilter.h  MelFilterBank.cpp  MelFilterBank.h
Quasar/experimental/ml/: Dtw.cpp  DtwPoint.h
Quasar/experimental/transforms/: Mfcc.cpp  Mfcc.h
Quasar/filter/: MelFilter.cpp  MelFilter.h  MelFilterBank.h  RaisedCosineFilter.h  SincFilter.h
Quasar/ml/: Dtw.h
Quasar/source/: Frame.h  FramesCollection.h  PlainTextFile.cpp  PlainTextFile.h  RawPcmFile.h  SignalSource.h  WaveFile.cpp  WaveFile.h  WaveFileHandler.cpp  WaveFileHandler.h
Quasar/source/filter/: RaisedCosineFilter.h  SincFilter.h
Quasar/source/generator/: ChirpGenerator.h  Generator.h  PinkNoiseGenerator.h  SineGenerator.h  SquareGenerator.h  TriangleGenerator.h  WhiteNoiseGenerator.h
Quasar/source/window/: BarlettWindow.h  BlackmanHarrisWindow.h  BlackmanNuttallWindow.h  BlackmanWindow.h  CosineWindow.h  FlattopWindow.h  GaussianWindow.h  HammingWindow.h  HannWindow.h  NuttallWindow.h  RectangularWindow.h  WelchWindow.cpp  WelchWindow.h
Quasar/synth/: KarplusStrongSynthesizer.cpp  KarplusStrongSynthesizer.h  SineSynthesizer.cpp  SineSynthesizer.h  Synthesizer.cpp  Synthesizer.h
Quasar/transform/: Dct.cpp  Dct.h  Dft.cpp  Dft.h  Fft.h  FftFactory.cpp  FftFactory.h  OouraFft.cpp  OouraFft.h  QuasarFft.cpp  QuasarFft.h  Spectrogram.cpp  Spectrogram.h
Quasar/wrappers/: SoundBufferAdapter.cpp  SoundBufferAdapter.h
aquila/: functions.h  global.h
aquila/source/: Frame.cpp  Frame.h  FramesCollection.cpp  FramesCollection.h  SignalSource.cpp  SignalSource.h
aquila/source/generator/: ChirpGenerator.cpp  ChirpGenerator.h  Generator.cpp  Generator.h  PinkNoiseGenerator.h  SineGenerator.cpp  SineGenerator.h  SquareGenerator.h  TriangleGenerator.h  WhiteNoiseGenerator.h
aquila/source/window/: BarlettWindow.h  BlackmanHarrisWindow.h  BlackmanNuttallWindow.h  BlackmanWindow.h  CosineWindow.h  FlattopWindow.h  GaussianWindow.h  HammingWindow.cpp  RectangularWindow.h
aquila/transform/: Mfcc.h  OouraFft.cpp  OouraFft.h
examples/am_modulation/: am_modulation.cpp
examples/dtw_path_recovery/: dtw_path_recovery.cpp
examples/fft_comparison/: fft_comparison.cpp
examples/fft_filter/: fft_filter.cpp
examples/fft_simple_spectrum/: fft_simple_spectrum.cpp
examples/frame_iteration/: frame_iteration.cpp
examples/generators/: generators.cpp
examples/mfcc_calculation/: mfcc_calculation.cpp
examples/qt/qt_wave_properties/: MainWindow.cpp  WavePropertiesWidget.cpp  WavePropertiesWidget.h
examples/qt/qwt_spectrogram/: qwt_spectrogram.cpp
examples/qt/qwt_wave_plot/: qwt_wave_plot.cpp
examples/sfml/sfml_generator/: sfml_generator.cpp
examples/sfml/sfml_imperial_march/: sfml_imperial_march.cpp
examples/sfml/sfml_karplus_strong/: sfml_karplus_strong.cpp
examples/sine_generator/: sine_generator.cpp
examples/spectrogram/: spectrogram.cpp
examples/square_generator/: square_generator.cpp
examples/text_plot/: text_plot.cpp
examples/triangle_generator/: triangle_generator.cpp
examples/utility_functions/: utility_functions.cpp
examples/wave_info/: wave_info.cpp
examples/wave_iteration/: wave_iteration.cpp
examples/window_plot/: window_plot.cpp
examples/window_usage/: window_usage.cpp
tests/: Exceptions.cpp  functions.cpp
tests/filter/: MelFilter.cpp  MelFilterBank.cpp
tests/ml/: Dtw.cpp
tests/source/: Frame.cpp  FramesCollection.cpp  PlainTextFile.cpp  RawPcmFile.cpp  SignalSource.cpp  WaveFile.cpp
tests/source/generator/: PinkNoiseGenerator.cpp  SineGenerator.cpp  SquareGenerator.cpp  TriangleGenerator.cpp  WhiteNoiseGenerator.cpp
tests/source/window/: BarlettWindow.cpp  BlackmanHarrisWindow.cpp  BlackmanNuttallWindow.cpp  BlackmanWindow.cpp  CosineWindow.cpp  FlattopWindow.cpp  GaussianWindow.cpp  HammingWindow.cpp  HannWindow.cpp  NuttallWindow.cpp  RectangularWindow.cpp  WelchWindow.cpp
tests/synth/: KarplusStrongSynthesizer.cpp  SineSynthesizer.cpp
tests/tools/: TextPlot.cpp
tests/transform/: AquilaFft.cpp  Dct.cpp  Dft.cpp  Fft.cpp  Fft.h  Mfcc.cpp  OouraFft.cpp  Spectrogram.cpp
tests/wrappers/: SoundBufferAdapter.cpp
